nginx-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-nginx-app
  labels:
    app: nginx
spec:
  replicas: 3 # สั่งให้รัน 2 Pod พร้อมกัน
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: nginx:latest
        ports:
        - containerPort: 80
        volumeMounts:
        - name: html-volume
          mountPath: /usr/share/nginx/html
      volumes:
      - name: html-volume
        configMap:
          name: my-nginx-config
---
apiVersion: v1
kind: Service
metadata:
  name: my-nginx-service
spec:
  type: NodePort # เปิดพอร์ตเพื่อให้เราเข้าถึงจาก Web Browser ของเครื่องเราได้
  selector:
    app: nginx
  ports:
    - port: 80
      targetPort: 80
      nodePort: 30080 # เราจะเข้าเว็บผ่านพอร์ต 30080 ของ localhost
